--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
 				<section class="awe-section bg-gray">
 					<div class="container">
 						<div class="row">
-							<div class="col-md-6 col-lg-5 "><img src="/assets/img/ProfilePic.jpg" w="380" h="820" auto="compress" cs="tinysrgb" alt=""></a>
+							<div class="col-md-6 col-lg-5 "><img src="assets/img/works/ProfilePic.jpg" w="380" h="820" auto="compress" cs="tinysrgb" alt=""></a>
 							</div>
 							<div class="col-md-6 col-lg-6 col-xs-offset-0 col-sm-offset-0 col-md-offset-0 col-lg-offset-1 ">
 								
